--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=viviendaSocial
+server.port=8080
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+spring.datasource.url=jdbc:h2:file:C:/Users/Hermes/Desktop/DAM/viviendaSocial.db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=viviendaSocial_user
+spring.datasource.password=viviendaSocial_password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
